--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,28 @@
 			<version>2.6.0</version>
 		</dependency>
 	</dependencies>
+	
+	<profiles>
+		<!-- Perfil para Desenvolvimento (PostgreSQL) -->
+		<profile>
+			<id>prd</id>
+			<properties>
+				<spring.datasource.url>jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}</spring.datasource.url>
+				<spring.datasource.username>${PGUSER}</spring.datasource.username>
+				<spring.datasource.password>${PGPASSWORD}</spring.datasource.password>
+			</properties>
+		</profile>
+
+		<!-- Perfil para Testes (H2) -->
+		<profile>
+			<id>dev</id>
+			<properties>
+				<spring.datasource.url>jdbc:h2:mem:sdw2023</spring.datasource.url>
+				<spring.datasource.username>sdw2023</spring.datasource.username>
+				<spring.datasource.password></spring.datasource.password>
+			</properties>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
