fix: correção da conexão do bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.application.name=dio-spring-security
+spring.jpa.open-in-view = false
+server.port=${PORT:3000}
 
-security.config.prefix=Bearer
-security.config.key=SECRET_KEY
-security.config.expiration=3600000
-
-##H2 Database Connection Properties
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.show-sql: true
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://postgres:RPAycIxdyFBlyobZYFlBOEfaITDOKTxS@postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=RPAycIxdyFBlyobZYFlBOEfaITDOKTxS  
+spring.datasource.driver-class-name=org.postgresql.Driver  
+spring.jpa.hibernate.ddl-auto=update
